replace tap with click on bottombar

--- a/projects/kbtv-client/src/app/shared/components/bottom-action-bar/bottom-action-bar.component.html
+++ b/projects/kbtv-client/src/app/shared/components/bottom-action-bar/bottom-action-bar.component.html
@@ -5,7 +5,7 @@
     }">
     
         <div class="bottom-bar-side left mat-elevation-z3" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
-            <button *ngIf="vm.isXs" mat-icon-button aria-label="Toggle sidenav" (tap)="toggleDrawer()">
+            <button *ngIf="vm.isXs" mat-icon-button aria-label="Toggle sidenav" (click)="toggleDrawer()">
                 <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
             </button>
         </div>
@@ -23,7 +23,7 @@
     </mat-toolbar>
 
     <ng-template #noActionsTemplate>
-        <button *ngIf="vm.isXs" mat-mini-fab aria-label="Toggle sidenav" (tap)="toggleDrawer()" class="no-actions-drawer">
+        <button *ngIf="vm.isXs" mat-mini-fab aria-label="Toggle sidenav" (click)="toggleDrawer()" class="no-actions-drawer">
             <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
         </button>
     </ng-template>
