--- a/projects/kbtv-client/src/app/shared-app/components/fetching-model-content/fetching-model-content.component.html
+++ b/projects/kbtv-client/src/app/shared-app/components/fetching-model-content/fetching-model-content.component.html
@@ -1,6 +1,7 @@
 <ng-container *ngIf="vm$ | async; let vm">
     <app-no-content *ngIf="!vm.isFetching else fetching">
         Finner ingen {{ modelProp | translate : true }}
+        <ng-content></ng-content>
     </app-no-content>
 
     <ng-template #fetching>
