--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list-view/mission-list-view.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list-view/mission-list-view.component.html
@@ -1,6 +1,6 @@
 <div class="h-100 bg-card" style="overflow:hidden;" fxLayout="column" fxLayoutAlign="start stretch">
 
-    <cdk-virtual-scroll-viewport *ngIf="missions?.length; else noContent"
+    <cdk-virtual-scroll-viewport
         itemSize="56" maxBufferPx="800" minBufferPx="800" class="h-100"
         appScrollNavElevationToggler>
 
@@ -18,7 +18,3 @@
     </cdk-virtual-scroll-viewport>
 
 </div>
-
-<ng-template #noContent>
-    <app-no-content>Fant ingen oppdrag</app-no-content>
-</ng-template>
