--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list-view/user-timesheet-list-view.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list-view/user-timesheet-list-view.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="column" fxLayoutAlign="start stretch" class="h-100">
-    <cdk-virtual-scroll-viewport *ngIf="timesheets?.length else noContent"
+    <cdk-virtual-scroll-viewport *ngIf="timesheets?.length else loading"
         itemSize="96" maxBufferPx="800" minBufferPx="800" fxFlex appScrollNavElevationToggler>
         <ng-container *cdkVirtualFor="let timesheet of timesheets | sortByDate : 'startTime'; trackBy: trackByTimesheet">
                 
@@ -21,8 +21,8 @@
     </cdk-virtual-scroll-viewport>
 </div> 
 
-<ng-template #noContent>
-    <app-no-content [buttonInfo]="filterButton">
-        Finner ingen timer med gitte filtre.
-    </app-no-content>
+<ng-template #loading>
+    <app-fetching-model-content modelProp="userTimesheets">
+        <app-button *ngIf="filterButton" [config]="filterButton" class="fadeIn mt-4" style="display:block"></app-button>
+    </app-fetching-model-content>
 </ng-template>
