--- a/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week.component.html
@@ -1,16 +1,17 @@
+<style>::ng-deep .week-view-bottom-bar > mat-toolbar { box-shadow: none } </style>
 <app-main-skeleton contentWrapperClass="bottom-bar-padding">
 
   <app-main-top-nav-bar navbar [config]="navConfig$ | async" >
   </app-main-top-nav-bar>
 
-  <app-user-timesheet-week-view [vm]="vm$ | async" style="height:100%;display:block"
+  <app-user-timesheet-week-view [vm]="vm$ | async"
     (swiperight)="previousWeek()" 
     (swipeleft)="nextWeek()"
     (timesheetClicked)="$event?.status === 2 ? openTimesheetCard($event?.id) : openTimesheetForm($event?.id)"
     (labelClicked)="openTimesheetForm(null, {date: $event})">
   </app-user-timesheet-week-view>
 
-  <app-bottom-action-bar bottombar [actions]="bottomActions">
+  <app-bottom-action-bar bottombar class="week-view-bottom-bar" [actions]="bottomActions">
   </app-bottom-action-bar>
 
 </app-main-skeleton>
