--- a/apps/kbtv-client/src/app/home/home-nav-tile-grid/home-nav-tile-grid.component.html
+++ b/apps/kbtv-client/src/app/home/home-nav-tile-grid/home-nav-tile-grid.component.html
@@ -21,8 +21,9 @@
         margin: 4px;
         word-break: break-word;
         hyphens: auto;
-    }
-    .tile-text{line-height:1;}
+    }   
+    .tile-text{ line-height:1; }
+    mat-icon{ transform: scale(1.5); margin-bottom: 8px; }
 </style>
 
 <div class="tile-grid" [ngClass]="columnCount === 2 ? 'tile-grid-2' : 'tile-grid-3'">
@@ -32,7 +33,7 @@
         <span *ifRole="nav.allowedRoles" class="tile mat-elevation-z2 foreground-card" matRipple 
             [routerLink]="nav.routerLink" [attr.aria-label]="nav.aria">
 
-            <mat-icon class="scale-150 mb-2">{{ nav.icon }}</mat-icon>
+            <mat-icon>{{ nav.icon }}</mat-icon>
 
             <span class="mat-body-2 tile-text">{{ nav.text }}</span>
 
