--- a/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/header-layout-skeleton/header-layout-skeleton.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/header-layout-skeleton/header-layout-skeleton.component.html
@@ -11,7 +11,7 @@
 
 <div class="content-container">
 
-    <div class="header-container" fxLayout="row" fxLayoutAlign="center center" #header>
+    <div class="header-container" #header>
         <ng-content select="[header]"></ng-content>
     </div>
 
