--- a/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list.component.html
@@ -4,7 +4,7 @@
     <ng-container navbar>
   
       <app-main-top-nav-bar 
-        [fxShow]="searchBarHidden" 
+        [appHide]="!searchBarHidden" 
         [config]="topNavConfig">
       </app-main-top-nav-bar>
 
