--- a/apps/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
@@ -9,7 +9,7 @@
         </app-chips-bar>
     </ng-container>
 
-    <app-timesheet-statistic-table #statTable fxFlex 
+    <app-timesheet-statistic-table #statTable style="box-sizing: border-box; flex: 1 1 0%"
         [config]="vm.tableConfig"
         [overlayNoRowsTemplate]="vm.noRowsText">
     </app-timesheet-statistic-table>
