--- a/apps/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.html
+++ b/apps/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z2  mission-card" fxFlex>
+<div class="mat-elevation-z2 mission-card">
 
     <span class="mat-body-2 m-3">
       Sist besøkte oppdrag    
