--- a/apps/kbtv-client/src/app/shared/components/bottom-action-bar/bottom-action-bar.component.html
+++ b/apps/kbtv-client/src/app/shared/components/bottom-action-bar/bottom-action-bar.component.html
@@ -4,7 +4,7 @@
         'bottom-bar-start-fab': !vm.isXs
     }">
     
-        <div class="bottom-bar-side left mat-elevation-z3" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
+        <div class="bottom-bar-side left mat-elevation-z3">
             <button *ngIf="vm.isXs" mat-icon-button aria-label="Toggle sidenav" (click)="toggleDrawer()">
                 <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
             </button>
