--- a/apps/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.html
+++ b/apps/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.html
@@ -5,7 +5,7 @@
 
     <span class="mr-auto ellipsis">
 
-        <span *ngIf="config.title" ngClass.xs="ml-1" ngClass.gt-xs="ml-2">{{ config.title }}</span>
+        <span class="ml-2" *ngIf="config.title">{{ config.title }}</span>
 
         <span *ngIf="config.subTitle" class="mat-caption ml-1">{{ config.subTitle }}</span>
 
