--- a/apps/kbtv-client/src/app/feature-modules/login/login/login.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/login/login/login.component.html
@@ -1,12 +1,11 @@
 <ng-container *ngIf="vm$ | async; let vm">
 
-  <div *ngIf="vm.isSmall; else desktop" class="login-container" fxLayout="column"
-    fxLayoutAlign="space-between stretch">
+  <div *ngIf="vm.isSmall; else desktop" class="login-container">
 
-    <div fxFlex class="header-container">
+    <div class="header-container">
       <div class="image-container"></div>
 
-      <div class="logo-container" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="8px">
+      <div class="logo-container">
         <img src="assets/icons/icon-72x72.png" alt="Logo bilde" />
 
         <span class="mat-body-strong logo-text">Bjørkelangen<br />Bygg og Eiendom</span>
@@ -19,14 +18,14 @@
   </div>
 
   <ng-template #desktop>
-    <div class="login-container-desktop" fxLayout="row" fxLayoutAlign="start center">
-      <div class="image-container" fxFlex=40></div>
-      <div class="form-container" fxFlex fxLayout="column" fxLayoutAlign="center center">
+    <div class="login-container-desktop">
+      <div class="image-container"></div>
+      <div class="form-container">
 
-        <div class="logo-container" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="8px">
+        <div class="logo-container">
           <img src="assets/icons/icon-128x128.png" alt="Logo bilde" />
 
-          <span class="mat-title logo-text">Bjørkelangen<br />Bygg og Eiendom</span>
+          <span class="mat-title logo-text mt-2">Bjørkelangen<br />Bygg og Eiendom</span>
         </div>
 
         <app-login-form [disabled]="vm.formDisabled" (submitted)="authenticate($event)"></app-login-form>
