--- a/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/header-layout-skeleton/header-layout-skeleton.component.scss
+++ b/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/header-layout-skeleton/header-layout-skeleton.component.scss
@@ -5,6 +5,7 @@
     width:100%;
     height:100%;
     position: relative;
+    
     .header-container{
         width:100%;
         text-align:center;
@@ -15,6 +16,12 @@
         overflow:hidden;
         min-height:160px;
         max-height:40vh; 
+
+        flex-direction: row;
+        box-sizing: border-box;
+        display: flex;
+        place-content: center;
+        align-items: center;
     }
     
     .content-header{
