--- a/apps/kbtv-client/src/app/feature-modules/mission-modules/shared-mission/components/image-viewer/image-viewer.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/mission-modules/shared-mission/components/image-viewer/image-viewer.component.html
@@ -1,25 +1,18 @@
-<!-- <mat-toolbar class="overlay_container image_toolbar" fxLayout="row" fxLayoutAlign="space-between center" 
-    [fxHide]="toolbarHidden">
-    <button mat-icon-button aria-label="Lukk" (tap)="close()">
-        <mat-icon>close</mat-icon>
-    </button>
-    <button mat-icon-button (click)="openBottomSheet()"><mat-icon>more_vert</mat-icon></button>
-</mat-toolbar> -->
-<app-main-top-nav-bar [config]="navConfig" overlayMode=true [fxHide]="toolbarHidden">
+<app-main-top-nav-bar [config]="navConfig" overlayMode=true [appHide]="toolbarHidden">
 </app-main-top-nav-bar>
 
 <ng-container *ngIf="loadingImage$ | async; let loadingImage">
-  <img appImageErrorPlaceholder [fxHide]="loadingImage.loading" alt="oppdragsbilde"
+  <img appImageErrorPlaceholder [appHide]="loadingImage.loading" alt="oppdragsbilde"
     [src]="currentImage | appFileUrl: this.folder" layout-fill
     (tap)="toolbarHidden = !toolbarHidden" 
     (swiperight)="previousImage()" 
     (swipeleft)="nextImage()" 
     (load)="onCurrentImageLoaded()"/>
 
-  <mat-spinner [fxShow]="loadingImage.loading" color="accent"></mat-spinner>
+  <mat-spinner [appHide]="!loadingImage.loading" color="accent"></mat-spinner>
 </ng-container>
 
-<div *ngIf="images?.length" class="page-counter-container" [fxHide]="toolbarHidden">
+<div *ngIf="images?.length" class="page-counter-container" [appHide]="toolbarHidden">
   <span class="page-counter">{{ index + 1 }} / {{ images?.length }}</span>
 </div>
 
