--- a/apps/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-list/timesheet-admin-list-view/timesheet-admin-list-view.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-list/timesheet-admin-list-view/timesheet-admin-list-view.component.html
@@ -1,5 +1,20 @@
-<div class="h-100" fxLayout="column" fxLayoutAlign="start stretch">
-    <cdk-virtual-scroll-viewport itemSize="96" maxBufferPx="800" minBufferPx="800" fxFlex
+<style>
+    cdk-virtual-scroll-viewport{     
+        flex: 1 1 0%;
+        box-sizing: border-box;
+    }
+    .container{
+        flex-direction: column;
+        box-sizing: border-box;
+        display: flex;
+        place-content: stretch flex-start;
+        align-items: stretch;
+        max-width: 100%;
+        height: 100%;
+    }
+</style>
+<div class="container">
+    <cdk-virtual-scroll-viewport itemSize="96" maxBufferPx="800" minBufferPx="800"
         appScrollNavElevationToggler>
 
         <ng-container *cdkVirtualFor="let timesheet of timesheets; trackBy: trackById">
