--- a/apps/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-week-list/timesheet-admin-week-list-view/timesheet-admin-week-list-view.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-week-list/timesheet-admin-week-list-view/timesheet-admin-week-list-view.component.html
@@ -1,14 +1,35 @@
-<div class="h-100" fxLayout="column" fxLayoutAlign="start stretch">
+<style>
+    cdk-virtual-scroll-viewport{     
+        flex: 1 1 0%;
+        box-sizing: border-box;
+    }
+    .container{
+        flex-direction: column;
+        box-sizing: border-box;
+        display: flex;
+        place-content: stretch flex-start;
+        align-items: stretch;
+        max-width: 100%;
+        height: 100%;
+    }
+    .hidden-swipe-content{
+        width:82px;
+        flex-direction: column;
+        box-sizing: border-box;
+        display: flex;
+        place-content: center;
+        align-items: center;
+    }
+</style>
+<div class="container">
     
-    <cdk-virtual-scroll-viewport itemSize="82" maxBufferPx="800" minBufferPx="800" fxFlex
-        appScrollNavElevationToggler>
+    <cdk-virtual-scroll-viewport itemSize="82" maxBufferPx="800" minBufferPx="800" appScrollNavElevationToggler>
         <ng-container *cdkVirtualFor="let summary of summaries; trackBy: trackByWeek; templateCacheSize:0" >
             
             <app-swipe-card openWidth="82px" closedWidth="5px"
                 [lockPosition]="!isXs ? 'open' : summary.openHours === 0 ? 'close' : null">
                 
-                <div swipeContent matRipple style="width:82px" class="h-100"
-                    fxLayout="column" fxLayoutAlign="center center"
+                <div swipeContent matRipple class="hidden-swipe-content h-100"
                     [ngClass]="summary.openHours > 0 ? 'warn' : 'accent'" 
                     (press)="changeTimesheetStatuses(summary.timesheets)">
                     <mat-icon style="transform:scale(1.25)">{{ summary.openHours > 0 ? 'lock_open' : 'lock' }}</mat-icon>
