--- a/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week-view/user-timesheet-week-view.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week-view/user-timesheet-week-view.component.html
@@ -1,7 +1,8 @@
-<div class="week-view-container" fxLayout="row">
+<div class="week-view-container">
+  
   <ng-container *ngFor="let weekDay of vm.numberOfWeekDays | arrayFromNumber">
 
-    <div class="w-100" fxLayout="column" fxLayoutAlign="start stretch" fxFlex>
+    <div class="day-container">
 
       <app-timesheet-day-label class="mb-1 day-label"
         [date]="vm.weekCriteria | getDateByDateParams : weekDay"
@@ -9,17 +10,18 @@
       </app-timesheet-day-label>
 
       <ng-container *ngIf="vm.weekDaySummaries && vm.weekDaySummaries[weekDay]">
+
         <app-timesheet-mission-bar class="fadeInDown" style="margin:2px"
           *ngFor="let timesheet of vm.weekDaySummaries[weekDay].timesheets | sortByDate: 'startTime' : 'asc'; trackBy: trackByTimesheet;"
           [timesheet]="timesheet"
           (barClicked)="timesheetClicked.emit(timesheet)">
         </app-timesheet-mission-bar>
+
       </ng-container>
 
     </div>
     
     <div class="fade-line" *ngIf="weekDay !== vm.numberOfWeekDays"></div>
-    <!-- <mat-divider vertical="true" *ngIf="weekDay !== 7"></mat-divider> -->
 
   </ng-container>
 
