--- a/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week-view/user-timesheet-week-view.component.scss
+++ b/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week-view/user-timesheet-week-view.component.scss
@@ -1,17 +1,41 @@
 @import '../../../../../../styles/variables';
 
-.week-view-container { min-height: 100%; }
-
-.day-label { z-index:1; position:sticky; top:0; }
-
 :host{ 
   height:100%; display:block; overflow-y: scroll; 
   background: linear-gradient(to top, $accent 10px, transparent calc(100% - 88px));
 }
 
-.fade-line{
-  background-color: mat-color($foreground, divider); 
-  width: 1px;
-  background: 
-    linear-gradient(to top, transparent 30px, mat-color($foreground, divider) calc(100% - 88px))
+.week-view-container { 
+  min-height: 100%; 
+  flex-direction: row;
+  box-sizing: border-box;
+  display: flex;
+
+  .day-container{
+    flex-direction: column;
+    box-sizing: border-box;
+    display: flex;
+    place-content: stretch flex-start;
+    align-items: stretch;
+    flex: 1 1 0%;
+    width: 100%;
+
+    .day-label { 
+      z-index:1; 
+      position:sticky; 
+      top:0; 
+    }
+
+  }
+
+  .fade-line{
+    background-color: mat-color($foreground, divider); 
+    width: 1px;
+    background: 
+      linear-gradient(to top, transparent 30px, mat-color($foreground, divider) calc(100% - 88px))
+
+  }
+
 }
+
+
