--- a/apps/kbtv-client/src/app/shared/components/bottom-action-bar/bottom-action-bar.component.scss
+++ b/apps/kbtv-client/src/app/shared/components/bottom-action-bar/bottom-action-bar.component.scss
@@ -36,19 +36,19 @@
     padding-bottom:var(--bottom-nav-padding)!important;
     box-sizing:border-box;
     width: calc(50% - 35px);
+    flex-direction: row;
+    display: flex;
+    align-items: center;
 }
 
 .left{
     border-radius: 0px 9px 0px 0px;
+    place-content: center flex-start;
 }
+
 .right{
-    border-radius: 9px 0px 0px 0px;   
-       
-    flex-direction: row;
-    box-sizing: border-box;
-    display: flex;
+    border-radius: 9px 0px 0px 0px;        
     place-content: center flex-end;
-    align-items: center;
 }
 
 .bottom-bar-no-fab{
