fix ref scope issue & rename style class

--- a/libs/form-sheet/src/lib/form-sheet-nav-bar/form-sheet-nav-bar.component.html
+++ b/libs/form-sheet/src/lib/form-sheet-nav-bar/form-sheet-nav-bar.component.html
@@ -10,7 +10,7 @@
 <mat-toolbar #navBar *ngIf="config">
 
     <button mat-icon-button aria-label="Lukk skjema"
-        (tap)="closed.emit(true)">
+        (click)="closed.emit(true)">
         <mat-icon>close</mat-icon>
     </button>
 
