replace overflow scroll with auto

--- a/libs/notification/src/lib/notification.component.html
+++ b/libs/notification/src/lib/notification.component.html
@@ -8,7 +8,7 @@
 
     .details {
         max-height: 30vh;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 
     .notification-title {
