--- a/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/header-layout-skeleton/header-layout-skeleton.component.scss
+++ b/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/header-layout-skeleton/header-layout-skeleton.component.scss
@@ -1,7 +1,7 @@
 @import '../../../../../styles/variables';
 
 .content-container{
-    overflow:scroll;
+    overflow:auto;
     width:100%;
     height:100%;
     position: relative;
