--- a/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week-view/user-timesheet-week-view.component.scss
+++ b/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week-view/user-timesheet-week-view.component.scss
@@ -1,7 +1,7 @@
 @import '../../../../../../styles/variables';
 
 :host{ 
-  height:100%; display:block; overflow-y: scroll; 
+  height:100%; display:block; overflow-y: auto; 
   background: linear-gradient(to top, $accent 10px, transparent calc(100% - 88px));
 }
 
