--- a/apps/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.scss
+++ b/apps/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.scss
@@ -14,7 +14,7 @@
     margin: 0 12px;
 } 
 .mission-list{
-    overflow-y:scroll;
+    overflow-y:auto;
     overflow-x:hidden;
     width:100%; 
     height:90%;
