--- a/apps/kbtv-client/src/app/shared/components/bottom-action-bar/bottom-action-bar.component.html
+++ b/apps/kbtv-client/src/app/shared/components/bottom-action-bar/bottom-action-bar.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="vm$ | async; let vm">
     <mat-toolbar *ngIf="alwaysDisplayBar || vm.actions?.length || fab; else noActionsTemplate" class="bottom-bar" [ngClass]="{
         'bottom-bar-no-fab mat-elevation-z3': !fab || !(fab.allowedRoles | ifRole),
-        'bottom-bar-start-fab': !vm.isXs
+        'bottom-bar-start-fab': !vm.isXs && fab
     }">
     
         <div class="bottom-bar-side left mat-elevation-z3">
