refactor how request descriptions are made

--- a/apps/kbtv-client/src/app/feature-modules/request-log/request-log/failed-request-log-list/failed-request-log-list.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/request-log/request-log/failed-request-log-list/failed-request-log-list.component.html
@@ -10,7 +10,7 @@
 
         <div class="mat-caption">Behandling mislykket</div>
 
-        {{ req.request.options.description }}
+        {{ req.request.callerAction | actionDescription }}
 
     </app-list-item>
 
