--- a/apps/kbtv-client/src/app/feature-modules/request-log/request-log/completed-request-log-list/completed-request-log-list.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/request-log/request-log/completed-request-log-list/completed-request-log-list.component.html
@@ -8,7 +8,7 @@
 
         <mat-icon left-side class="pl-2 pr-2" color="accent">check_circle</mat-icon>
 
-        {{ req.request.options.description }}
+        {{ req.request.callerAction | actionDescription }}
 
     </app-list-item>
 
