--- a/apps/kbtv-client/src/app/shared-app/components/optimistic-http-error-dialog/failed-command-list/failed-command-list.component.html
+++ b/apps/kbtv-client/src/app/shared-app/components/optimistic-http-error-dialog/failed-command-list/failed-command-list.component.html
@@ -7,7 +7,7 @@
 
         <mat-icon left-side class="pl-2 pr-2" color="warn">error</mat-icon>
 
-        {{ req.request.options.description }}
+        {{ req.request.callerAction | actionDescription }}
 
     </app-list-item>
 
