--- a/apps/kbtv-client/src/app/shared/scam/optimistic-http-error-dialog/optimistic-http-error-dialog.component.html
+++ b/apps/kbtv-client/src/app/shared/scam/optimistic-http-error-dialog/optimistic-http-error-dialog.component.html
@@ -8,7 +8,7 @@
     
         <div class="mat-caption">Behandling mislykket</div>
     
-        {{ data.errorCommand.request.callerAction | actionDescription}}
+        {{ data.errorCommand.request.callerAction | actionDescription : ActionDescriptions}}
     
     </app-list-item>
 
