refactor dynamic-forms to increase type safety

--- a/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week.component.html
@@ -8,7 +8,7 @@
     (swiperight)="previousWeek()" 
     (swipeleft)="nextWeek()"
     (timesheetClicked)="$event?.status === 2 ? openTimesheetCard($event?.id) : openTimesheetForm($event?.id)"
-    (labelClicked)="openTimesheetForm(null, {date: $event})">
+    (labelClicked)="openTimesheetForm(null, { dateTime: { date: $event } } )">
   </app-user-timesheet-week-view>
 
   <app-bottom-action-bar bottombar class="week-view-bottom-bar" [actions]="bottomActions">
